--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Django==1.10.4
+django-lockdown==1.3
 facebook-sdk==2.0.0
 oauthlib==2.0.1
 requests==2.12.4
 requests-oauthlib==0.7.0
 six==1.10.0
 tweepy==3.5.0
+wheel==0.24.0
